[package]
authors = ["Brian Smith <brian@briansmith.org>"]
description = "Benchmarks for *ring*."
edition = "2018"
name = "ring-benches"
publish = false
resolver = "2"
version = "0.1.0"

[lib]
name = "ring_benches"

[dependencies]
ring = { path = "../" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "aead"
harness = false
